--- a/REDEP/documentacion.html
+++ b/REDEP/documentacion.html
@@ -43,7 +43,12 @@
 	    <div id="docs-sidebar" class="docs-sidebar">
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
-				    <li class="nav-item section-title"><a class="nav-link scrollto active" href="#section-1"><span class="theme-icon-holder mr-2"><i class="fas fa-map-signs"></i></span>Introducción</a></li>
+				    <li class="nav-item section-title"><a class="nav-link scrollto active" href="#section-1"><span class="theme-icon-holder mr-2">
+				    	<div class="mx-auto" style="width:20px" >
+				    		<svg focusable="false" viewBox="0 0 512 512"><path fill="currentColor" d="M507 84L464 41c-6-6-14-9-22-9H288V16c0-8-7-16-16-16h-32c-8 0-16 7-16 16v16H56c-13 0-24 10-24 24v80c0 13 10 24 24 24h385c8 0 16-3 22-9l43-43c6-6 6-16 0-22zM224 496c0 8 7 16 16 16h32c8 0 16-7.16 16-16V384h-64v112zm232-272H288v-32h-64v32H70c-8 0-16 3.37-22 9.37L4 276c-6 6-6 16 0 22L48 342c6 6 14 9 22 9H456c13 0 24-10 24-24v-80c0-13-10-24-24-24z"></path>
+				    		</svg>
+				    	</div>
+				    </span>Introducción</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-1">Section Item 1.1</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-2">Section Item 1.2</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-3">Section Item 1.3</a></li>
