--- a/REDEP/index.html
+++ b/REDEP/index.html
@@ -22,13 +22,15 @@
             <div class="container-fluid position-relative theme-bg-redep">
 				<nav class="navbar navbar-expand-lg" >
                     <div style="width:150px"> 
-						<svg focusable="false" viewBox="0 0 200 100">	
-							<rect x="0" y="0" width="100%" height="100%" fill="#3C496D"/>
-							<line x1="10%" y1="5%" x2="10%" y2="95%" stroke="white" stroke-width ="3%" />
-							<text x="20%" y="38%" fill="white" style="letter-spacing:2px;font-size:2.5em;font-weight: 600;font-family: Bodoni MT;">REDEP</text>	
-							<text x="20%" y="68%" fill="white" style="letter-spacing:1px;font-size:.9em;">RED EDUCATIVA</text>
-							<text x="20%" y="88%" fill="white" style="letter-spacing:1px;font-size:.9em;">PAÍS</text>
-						</svg>
+                    	<a href="https://www.wanku.cl/redep">
+							<svg focusable="false" viewBox="0 0 200 100">	
+								<rect x="0" y="0" width="100%" height="100%" fill="#3C496D"/>
+								<line x1="10%" y1="5%" x2="10%" y2="95%" stroke="white" stroke-width ="3%" />
+								<text x="20%" y="38%" fill="white" style="letter-spacing:2px;font-size:2.5em;font-weight: 600;font-family: Bodoni MT;">REDEP</text>	
+								<text x="20%" y="68%" fill="white" style="letter-spacing:1px;font-size:.9em;">RED EDUCATIVA</text>
+								<text x="20%" y="88%" fill="white" style="letter-spacing:1px;font-size:.9em;">PAÍS</text>
+							</svg>
+						</a>
 					</div>
 				</nav>
             </div><!--//container-->
